--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "preflight:green": "node scripts/hygiene/preflight-green.mjs",
     "refine:dry": "node scripts/refiner/index.mjs",
     "refine:run": "node scripts/refiner/index.mjs --apply",
+    "refine:css-contrast": "node scripts/refiner/check-css-contrast.mjs",
+    "validate:recipe": "node scripts/factory/validate-recipe.mjs",
+    "validate:recipes": "node scripts/factory/validate-recipe.mjs",
+    "test:recipe-quality": "node scripts/factory/test-recipe-quality.mjs",
     "analyze:field": "node scripts/analyzer/field-analyzer.mjs",
     "analyze:batch": "node scripts/analyzer/analyze-batch.mjs",
     "analyze:verify": "node scripts/analyzer/analyze-batch.mjs --quiet \"packages/forms/src/fields/**/*.tsx\"",
@@ -44,6 +48,9 @@
     "release": "turbo run build --filter=!./examples/* && changeset publish",
     "gen:picker": "hygen picker new",
     "test:overlay-smoke": "playwright test tests/overlay.spec.ts",
+    "storybook": "storybook dev -p 6008",
+    "storybook:all": "concurrently -n \"DS,Forms,Root\" \"pnpm --filter @intstudio/ds storybook\" \"pnpm --filter @intstudio/forms storybook\" \"pnpm storybook\"",
+    "build-storybook": "pnpm --filter @intstudio/ds build-storybook && pnpm --filter @intstudio/forms build-storybook && storybook build",
     "prepare": "husky"
   },
   "devDependencies": {
@@ -54,9 +61,12 @@
     "@changesets/cli": "^2.27.1",
     "@eslint/js": "^9.38.0",
     "@playwright/test": "^1.56.1",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
     "@types/node": "^20.11.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^2.1.1",
+    "concurrently": "^8.2.2",
     "cspell": "^9.2.2",
     "danger": "^13.0.4",
     "dependency-cruiser": "^17.1.0",
@@ -72,6 +82,7 @@
     "remark-frontmatter": "^5.0.0",
     "remark-preset-lint-recommended": "^7.0.1",
     "remark-validate-links": "^13.1.0",
+    "storybook": "^8.6.14",
     "tsup": "^8.0.2",
     "turbo": "^1.13.0",
     "typescript": "^5.4.5",
