--- a/packages/ds/package.json
+++ b/packages/ds/package.json
@@ -11,7 +11,8 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
-    }
+    },
+    "./dist/index.css": "./dist/index.css"
   },
   "files": [
     "dist",
@@ -66,20 +67,17 @@
     "react-day-picker": "^9.11.1"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^9.1.13",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-toolbars": "^9.0.8",
-    "@storybook/addon-viewport": "^9.0.8",
-    "@storybook/react": "^9.1.13",
-    "@storybook/react-vite": "^9.1.13",
-    "@storybook/test": "^8.6.14",
+    "@storybook/addon-a11y": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
-    "storybook": "^9.1.13",
+    "storybook": "^8.6.14",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5",
     "zod": "^3.22.0"
