--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -50,7 +50,9 @@
     "test:ui": "vitest --ui",
     "lint": "eslint src --ext .ts,.tsx",
     "api:extract": "api-extractor run --local",
-    "api:check": "api-extractor run"
+    "api:check": "api-extractor run",
+    "storybook": "storybook dev -p 6007",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -61,9 +63,17 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
+    "@storybook/test": "^8.6.14",
     "@types/react": "^18.3.18",
     "eslint": "^8.57.0",
     "eslint-plugin-cascade": "workspace:*",
+    "react-dom": "^18.3.1",
+    "storybook": "^8.6.14",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
