--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -58,6 +58,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@intstudio/core": "workspace:*",
     "@intstudio/ds": "workspace:*",
+    "lucide-react": "^0.547.0",
     "react": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "zod": "^3.24.1"
