--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "pnpm -r --parallel --filter './packages/**' dev",
     "typecheck": "pnpm -r --filter './packages/**' typecheck",
     "play": "pnpm --filter playground dev",
-    "clean": "rm -rf **/dist **/node_modules"
+    "clean": "rm -rf **/dist **/node_modules",
+    "validate:docs": "node scripts/validate-docs.mjs"
   },
   "devDependencies": {
     "typescript": "^5.9.3"
