--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "play": "pnpm --filter playground dev",
     "clean": "rm -rf **/dist **/node_modules",
     "validate:docs": "node scripts/validate-docs.mjs",
+    "validate:naming": "node scripts/validate-naming.mjs",
+    "validate:all": "pnpm validate:docs && pnpm validate:naming",
+    "lint:md": "markdownlint \"**/*.md\" --ignore node_modules",
+    "test:validator": "node scripts/__tests__/validate-docs.test.mjs",
     "setup:hooks": "bash scripts/setup-hooks.sh",
     "postinstall": "bash scripts/setup-hooks.sh",
     "doc:new": "node scripts/doc-new.mjs"
   },
   "devDependencies": {
+    "markdownlint-cli": "^0.45.0",
     "typescript": "^5.9.3"
   }
 }
