docs: realign repo to reflect Flowbite + SKIN architecture
## Summary
GitHub now mirrors reality - no more historical 'unified overlay' naming.

## Changes
- README: Added Current Focus section (Flowbite + SKIN + Control Panel)
- WHERE-TO-EDIT.md: No-hunting map for quick reference
- PR template: Simplified to focus on DS/Forms workflow
- CODEOWNERS: Updated for Forms package + DS areas
- PR #2 description: Ready-to-paste for forms-contracts-renderer

## Branches Renamed
- feat/unified-overlay-system → feat/ds-flowbite-skin
- feat/forms-layer-scaffold → feat/forms-contracts-renderer

## Result
Clear story for reviewers, zero confusion, clean progression.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,15 +1,26 @@
-# Documentation ownership
+# CODEOWNERS - Review routing for forms-studio monorepo
 # https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
 
-# Monorepo-level documentation
-/docs/**                      @josephehler
-/.cascade/**                  @josephehler
+# DS Layer (Flowbite + SKIN)
+/packages/ds/src/control/**             @josephehler
+/packages/ds/src/registry/**            @josephehler
+/packages/ds/src/fb/**                  @josephehler
 
-# Package-specific documentation  
-/packages/ds/docs/**          @josephehler
-/packages/core/docs/**        @josephehler
-/packages/ui-bridge/docs/**   @josephehler
+# Forms Layer (Contracts + Renderer)
+/packages/forms/**                      @josephehler
 
-# Configuration files
-/.github/**                   @josephehler
-/scripts/**                   @josephehler
+# Tokens & Design
+/packages/tokens/**                     @josephehler
+
+# Core utilities
+/packages/core/**                       @josephehler
+
+# Documentation
+/docs/**                                @josephehler
+/.cascade/**                            @josephehler
+/packages/*/docs/**                     @josephehler
+
+# Infrastructure
+/.github/**                             @josephehler
+/scripts/**                             @josephehler
+/tools/**                               @josephehler
