feat: add comprehensive rename guardrails (after-action report)
## Incident Response
After accidentally deleting flowbite-react-blocks (golden source) and breaking imports during directory rename, we've implemented permanent guardrails.

## Problem
- Manual renames broke imports (FlowScaffold → flow-scaffold)
- TypeScript only caught errors AFTER the damage
- macOS case-insensitivity masked issues until CI
- Golden source almost deleted by accident

## Solution: 5-Layer Defense

### 1. Safe Rename Command ✅
`pnpm refactor:rename <from> <to>`
- git mv (preserves history)
- Updates all imports (ts-morph)
- Regenerates barrels
- Runs typecheck
- One command, zero manual fixes

### 2. Rename Sanity Checks ✅
`pnpm doctor:rename` or `node scripts/validate-renames.mjs`
- Detects dangling imports
- Blocks spaces/duplicates in filenames
- Prevents PascalCase dirs under routes/
- Catches case-sensitivity issues

### 3. Golden Source Protection ✅
`node scripts/prevent-golden-source-delete.mjs`
- Blocks deletion of flowbite-react-blocks/
- Configured in .policy/roots-allowlist.json
- CODEOWNERS enforcement
- Pre-commit hook (when added)

### 4. CI Workflow ✅
.github/workflows/rename-sanity.yml
- Runs on every PR
- Blocks merge if rename issues detected
- Fast feedback (<2 min)

### 5. Documentation ✅
docs/handbook/RENAME_WORKFLOW.md
- Step-by-step workflow
- Troubleshooting guide
- Examples and FAQ

## Files Added
- scripts/refactor-rename.mts (safe rename command)
- scripts/validate-renames.mjs (sanity checks)
- scripts/prevent-golden-source-delete.mjs (protection)
- docs/handbook/RENAME_WORKFLOW.md (guide)
- .github/workflows/rename-sanity.yml (CI)

## Files Modified
- package.json (added refactor:rename, doctor:rename)
- .policy/roots-allowlist.json (golden sources list)
- .github/CODEOWNERS (flowbite protection)
- pnpm-lock.yaml (added ts-morph dependency)

## Usage
```bash
# Safe rename
pnpm refactor:rename packages/ds/src/routes/OldName packages/ds/src/routes/new-name

# 

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,9 @@
 # CODEOWNERS - Review routing for forms-studio monorepo
 # https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
 
+# Golden Sources (protected - cannot delete without approval)
+/flowbite-react-blocks-1.8.0-beta/**    @josephehler
+
 # DS Layer (Flowbite + SKIN)
 /packages/ds/src/control/**             @josephehler
 /packages/ds/src/registry/**            @josephehler
@@ -24,3 +27,4 @@
 /.github/**                             @josephehler
 /scripts/**                             @josephehler
 /tools/**                               @josephehler
+/.policy/**                             @josephehler
