feat: add adoption & CI metrics (Principal-level observability)
## Summary
First step toward Principal-level engineering: evidence-based decision making via metrics.

## What This Adds

### Adoption Metrics (scripts/metrics/adoption.mjs)
Tracks Flowbite vs DS wrapper usage across the codebase.

**Measures**:
- flowbite-react imports (raw usage)
- flowbite css/js usage
- @intstudio/ds/fb/* (DS wrappers)
- dsToFlowbite ratio (adoption %)

**Output**:
- reports/adoption-YYYY-MM-DD.json (detailed)
- reports/adoption-YYYY-MM-DD.csv (spreadsheet)

### CI Metrics (scripts/metrics/ci.mjs)
Times `pnpm doctor` and tracks pass/fail rate.

**Measures**:
- Command duration (ms)
- Success rate (ok: true/false)
- Error samples

**Output**:
- reports/ci-YYYY-MM-DD.json

### Baseline Snapshot (2025-01-25)
**Current state**:
- flowbite-react: 7 imports
- DS wrappers: 1 usage
- dsToFlowbite: 0.14 (14% adoption)
- Doctor: ~175ms

**Files with imports**:
- packages/ds/src/fb/* (expected - these are wrappers)
- packages/ui-bridge/src/form/* (migration targets)
- packages/demo-app/* (using DS wrappers ✅)

## Commands
```bash
pnpm metrics:adoption  # Scan adoption
pnpm metrics:ci        # Time doctor
pnpm metrics:all       # Both
```

## Why This Matters (Staff → Principal)

**Staff level**: Build systems, enforce with tooling
**Principal level**: Measure impact, show trends, drive adoption

This enables:
1. Evidence-based migration decisions
2. Progress tracking over time
3. Identifying migration targets (hot spots)
4. Proving impact (before/after metrics)
5. SLO tracking (time-to-green, adoption %)

## Next Steps (30/60/90 Plan)
- ✅ Day 1: Adoption metrics (done)
- [ ] Day 7: API Extractor (contract enforcement)
- [ ] Day 14: Changesets (versioning)
- [ ] Day 30: Migration codemods (driven by metrics)
- [ ] Day 60: Docs site with trend charts
- [ ] Day 90: Org-wide policy (hard blocks)

## Dependencies
- Added globby@15.0.0 (glob matching for adoption scan)

## Philosophy
**Observe → Sys

--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "ds:doctor": "pnpm doctor",
     "ds:new": "echo '🚧 Component generator coming soon! For now, use Input.template.tsx as reference.'",
     "refactor:rename": "tsx scripts/refactor-rename.mts",
+    "metrics:adoption": "node scripts/metrics/adoption.mjs",
+    "metrics:ci": "node scripts/metrics/ci.mjs",
+    "metrics:all": "pnpm metrics:adoption && pnpm metrics:ci",
     "sb": "storybook dev -p 6006",
     "sb:build": "storybook build",
     "sb:test": "storybook test --watch",
@@ -69,6 +72,7 @@
     "fast-glob": "^3.3.3",
     "flowbite": "2.5.2",
     "flowbite-react": "0.10.2",
+    "globby": "^15.0.0",
     "madge": "^7.0.0",
     "markdownlint-cli": "^0.45.0",
     "react": "^18.2.0",
