feat: add API Extractor (Jidoka for APIs) - Toyota stop-the-line
## Summary
Implemented API contract enforcement using Microsoft API Extractor.
This is the 'Jidoka' (built-in quality) principle from Toyota - stop the line when quality is at risk.

## What This Adds

### 1. API Baseline (Golden Source)
- packages/ds/etc/ds.api.md - Committed baseline of public API surface
- Tracks: exports, types, function signatures, enums
- Acts as 'golden source' for API contracts

### 2. Scripts & Commands
**Root level**:
- pnpm api:build - Build all packages
- pnpm api:check - Verify API unchanged
- pnpm api:update - Refresh baselines
- pnpm prepr - Run doctor + API check before PR

**Package level** (DS):
- pnpm --filter @intstudio/ds api:check
- pnpm --filter @intstudio/ds api:update

### 3. CI Enforcement (.github/workflows/api-contract.yml)
**Behavior**:
- Runs on every PR
- Fails if API surface changed without baseline update
- Comments on PR with fix instructions
- Blocks merge until resolved

**This is 'stop-the-line'**: PR cannot merge with API drift

### 4. PR Template Integration
Added 'Public API' checklist section:
- [ ] Ran pnpm api:check
- [ ] If changed: ran pnpm api:update
- [ ] If intentional: added changeset

### 5. Complete Documentation
docs/handbook/API_CONTRACT.md includes:
- Quick start workflows
- Troubleshooting guide
- TPS mapping (Jidoka, Andon, Poka-Yoke)
- Examples (add, deprecate, break)
- Integration with Changesets (coming Week 2)

### 6. Validation Update
Updated scripts/validate-docs.mjs to allow:
- packages/*/etc/*.api.md (API Extractor reports)
- packages/*/temp/*.api.md (API Extractor temp)

## TPS Mapping (Toyota Production System)

| TPS Principle | Implementation |
|---------------|----------------|
| Jidoka (built-in quality) | CI fails on API drift |
| Andon Cord | Baseline changes visible to all |
| Standard Work | pnpm prepr before PR |
| Visual Control | Baseline diff shows changes |
| Poka-Yoke | Can't merge without approval |

## Wo

--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "metrics:adoption": "node scripts/metrics/adoption.mjs",
     "metrics:ci": "node scripts/metrics/ci.mjs",
     "metrics:all": "pnpm metrics:adoption && pnpm metrics:ci",
+    "api:build": "pnpm -r --filter './packages/**' build",
+    "api:check": "pnpm -r --filter '@intstudio/ds' api:check",
+    "api:update": "pnpm -r --filter '@intstudio/ds' api:update",
+    "prepr": "pnpm doctor && pnpm api:build && pnpm api:check",
     "sb": "storybook dev -p 6006",
     "sb:build": "storybook build",
     "sb:test": "storybook test --watch",
@@ -52,6 +56,7 @@
     "sb:new": "node scripts/new-story.mjs"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.53.3",
     "@storybook/addon-a11y": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/addon-interactions": "8.6.14",
