chore: add api:check to doctor command
## Summary
Doctor now includes API contract check as final validation step.

## Change
```bash
# Before
pnpm doctor  # barrels, lint, typecheck, build

# After
pnpm doctor  # barrels, lint, typecheck, build, api:check
```

## Why
- Complete pre-PR validation in one command
- Ensures API surface hasn't drifted
- Matches prepr command behavior
- Toyota 'Standard Work' principle

## Validation
```bash
pnpm doctor  # ✅ passes (including api:check)
pnpm prepr   # ✅ passes (doctor + api:check)
```

All gates green - ready for PR #1. 🚀

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "prebuild": "pnpm barrels",
     "guard": "pnpm fix:imports && pnpm typecheck",
     "versions:check": "node scripts/check-versions.mjs",
-    "doctor": "pnpm barrels && pnpm lint:prod && pnpm typecheck && pnpm -r --filter './packages/**' build",
+    "doctor": "pnpm barrels && pnpm lint:prod && pnpm typecheck && pnpm -r --filter './packages/**' build && pnpm api:check",
     "doctor:rename": "node scripts/validate-renames.mjs && pnpm typecheck",
     "ds:doctor": "pnpm doctor",
     "ds:new": "echo '🚧 Component generator coming soon! For now, use Input.template.tsx as reference.'",
