--- a/packages/ds/package.json
+++ b/packages/ds/package.json
@@ -98,6 +98,7 @@
     "@intstudio/tokens": "workspace:*",
     "flowbite-react": "^0.10.1",
     "flowbite-react-icons": "^1.0.8",
+    "fuse.js": "^7.1.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^2.2.2"
   },
